[tool.poetry]
name = "savefigs"
version = "0.1.0"
description = "Save all open Matplotlib figures"
authors = ["zmoon <zmoon92@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/zmoon/savefigs"
repository = "https://github.com/zmoon/savefigs"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = ["matplotlib.*", "pytest"]
ignore_missing_imports = true
