[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "savefigs"
authors = [{name = "zmoon", email = "zmoon92@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "~=3.7"
dependencies = [
    "matplotlib ~=3.0",
]

[project.urls]
Home = "https://github.com/zmoon/savefigs"
Source = "https://github.com/zmoon/savefigs"
Documentation = "https://github.com/zmoon/savefigs"

[project.optional-dependencies]
test = [
  "mypy",
  "pytest",
]
dev = [
  "pdoc",
]


[tool.black]
line-length = 100

[tool.flake8]  # pyproject-flake8
max-line-length = 100
ignore = [
  "E203", # whitespace before ':' - doesn't work well with black
  "E402", # module level import not at top of file
  "E501", # line too long - let black worry about that
  "W503", # line break before binary operator
  "E226", # missing whitespace around arithmetic operator - not always more readable imho
]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "pytest", "IPython"]
ignore_missing_imports = true
